# WFS20

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  make_env.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bugs.yaml  config.yml  documentation.yaml  feature_request.yaml
.github/workflows/: cache.yml  purge_cache.yml
docs/: _quarto.yml  api.py  changelog.qmd  index.qmd
docs/_static/: styles.css  theme-dark.scss  theme-light.scss  version.js
envs/: wfs20_dev.yml  wfs20_test.yml
src/wfs20/: __init__.py  _dbase.py  cli.py  crs.py  error.py  io.py  reader.py  request.py  thread.py  util.py  version.py  wfs.py
src/wfs20/data/: axisorder.db
src/wfs20/io/: dbase.py  gml.py  shp.py  util.py
wfs20/: __init__.py  error.py  io.py  reader.py  request.py  util.py  version.py  wfs.py
wfs20/io/: __init__.py  gml.py
