[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wfs20"]

[tool.setuptools.package-data]
"wfs20.data" = ["axisorder.db"]

[tool.setuptools.dynamic]
version = {attr = "wfs20.version.__version__"}

## Project related stuff
[project]
name = "wfs20"
dynamic = ['version']

authors = [
    {name = "B.W. Dalmijn", email = "brencodeert@outlook.com"},
]
maintainers = [
    {name = "B.W. Dalmijn", email = "brencodeert@outlook.com"},
]

description = "Small library to request geospatial data (WFS)"
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.9"
dependencies = [
"lxml",
"requests",
]

keywords = ["wfs", "GIS", "request", "vector"]
classifiers = [
# How mature is this project? Common values are
#   3 - Alpha
#   4 - Beta
#   5 - Production/Stable
'Development Status :: 4 - Beta',

# Indicate who your project is intended for
'Intended Audience :: End Users/Desktop',
'Intended Audience :: Developers',
'Intended Audience :: Science/Research',

# Topic of the package
'Topic :: Scientific/Engineering :: GIS',

# Pick your license as you wish (should match "license" above)
'License :: OSI Approved :: MIT License',

# Language
'Natural Language :: English',

# OS
'Operating System :: OS Independent',

# Specify the Python versions you support here. In particular, ensure
# that you indicate whether you support Python 2, Python 3 or both.
'Programming Language :: Python :: 3',
'Programming Language :: Python :: 3.9',
'Programming Language :: Python :: 3.10',
'Programming Language :: Python :: 3.11',
]

# Project's optional dependencies (development)
[project.optional-dependencies]
all = [
    "setuptools>=61.0.0",
]
dev = [
    "pre-commit",
    "ruff",
    "wfs20[all, docs, io, test]",
]
docs = [
    "jupyter",
    "jupyter-cache",
    "quartodoc",
    "wfs20[all, io]",
]
io = [
    "gdal>=3.5",
]
test = [
	"pytest>=2.7.3",
	"pytest-cov",
    "pytest-mock",
	"responses",
    "wfs20[all, io]",
]

[project.urls]
"Homepage" = "https://github.com/dalmijn/WFS20"
"Source" =  "https://github.com/dalmijn/WFS20"
"Tracker" = "https://github.com/dalmijn/WFS20/issues"

[project.scripts]
wfs20 = "wfs20.cli:main"

[tool.make_env]
channels = ["conda-forge"]
deps_not_in_conda = ["quartodoc"]

## Some stuff for pytest and coverage
[tool.pytest.ini_options]
testpaths = [
    "test",
]

[tool.coverage.run]
branch = true
source = ["./src"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = ".cov"

## Linting stuff
[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore-init-module-imports = true
ignore = ["B904", "D105", "D211", "D213", "D301", "E712", "E741"]
exclude = ["docs"]

[tool.ruff.per-file-ignores]
"test/**" = ["D103", "D100", "D104"]
"test/conftest.py" = ["E402"]
"src/wfs20/__init__.py" = ["E402", "F401", "F403"]
"src/wfs20/cli.py" = ["D401"]

[tool.ruff.pydocstyle]
convention = "numpy"
